fixing control overlay rerendering when not visible

--- a/src/styles/_OverLay.scss
+++ b/src/styles/_OverLay.scss
@@ -9,9 +9,7 @@
     --height: 20px;
     //points="1,6 1,16, 13,15.5, 13,20, 29,10, 13,1 13,6" 
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 15 20"> <polygon points="1,1 1,19, 14,10" fill="#{$sg-arrow-fill}" stroke-width="1.5" stroke="#{$sg-arrow-border}" /> </svg>');
-    background-repeat: no-repeat no-repeat;
-    background-position: center center;
-    background-size: cover;
+    
     height: var(--height);
     width: var(--width);
     z-index: calc( $zindex-popover);
@@ -29,6 +27,7 @@
     }
 }
 .sg-tooltip-arrow {
+    --_text-color: #{$tooltip-text-color};
     --_brightness-filter: #{$tooltip-arrow-filter};
     --width: 10px;
     --height: 20px;
